<resources>
    <string name="app_name">MyNews</string>
    <string name="news_item_title_default">Title</string>
    <string name="new_item_date_default">01/01/01</string>
    <string name="news_item_news_default">No news</string>
    <string name="page_title_topstories">Top Stories</string>
    <string name="page_title_mostpopular">Most Popular</string>
    <string name="page_title_favorites">Sports</string>
    <string name="title_search">search</string>
    <string name="search_spinner_begin">Begin Date</string>
    <string name="spinner_begin_title">Begin date</string>
    <string name="spinner_end_title">End date</string>
    <string name="query_business_checkBox">Business</string>
    <string name="query_arts_checkBox">Arts</string>
    <string name="query_technology_checkBox">Technology</string>
    <string name="query_sports_checkBox">Sports</string>
    <string name="query_travel_checkBox">Travel</string>
    <string name="query_health_checkBox">Health</string>
    <string name="query_search_button">SEARCH</string>
    <string name="main_notification_menu">Notification</string>
    <string name="main_about_menu">About</string>
    <string name="main_help_menu">Help</string>
    <string name="news_item_section">Section</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="default_mynews_picture_description">Default MyNews picture</string>
</resources>
