<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".controllers.fragments.MainFragment"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/query_toolbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/query_query"

        app:navigationIcon="@drawable/baseline_arrow_back_white_24"

        app:title="query Articles"

        app:titleTextColor="@android:color/white"
        android:background="@color/PrimaryMyNewsLight"/>

    <EditText
        android:id="@+id/query_query"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@id/query_toolbar"

        android:hint="@string/title_search"
        android:inputType=""
        android:importantForAutofill="no"
        tools:targetApi="o" />


    <LinearLayout
        android:id="@+id/query_layout_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:baselineAligned="false"

        app:layout_constraintTop_toBottomOf="@id/query_query">

        <LinearLayout
            android:id="@+id/query_layout_begin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:layout_weight="1"

            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/query_cb_buisness"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"

                android:text="@string/query_business_checkBox" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/query_cb_arts"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"

                android:text="@string/query_arts_checkBox" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/query_cb_technology"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"

                android:text="@string/query_technology_checkBox" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/query_layout_end"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:layout_weight="1"

            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/querye_cb_sports"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"

                android:text="@string/query_sports_checkBox" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/query_cb_science"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"

                android:text="@string/query_travel_checkBox" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/query_cb_health"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"

                android:text="@string/query_health_checkBox" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/query_button_search"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"

        app:layout_constraintTop_toBottomOf="@id/query_layout_linear"

        android:background="@color/PrimaryMyNewsLight"
        android:text="@string/query_search_button"
        android:textColor="#FFFFFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>
