<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_item_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/news_item_view_height">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/news_item_img"

            android:layout_width="75dp"
            android:layout_height="75dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_margin="@dimen/recyclerview_margin_all"

            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/news_item_section"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/news_item_img"
            app:layout_constraintRight_toLeftOf="@id/news_item_title"

            android:layout_margin="@dimen/recyclerview_margin_all"

            android:text="@string/news_item_title_default"
            android:textSize="@dimen/recyclerview_size_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/news_item_title"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/news_item_section"
            app:layout_constraintRight_toLeftOf="@id/news_item_date"

            android:layout_margin="@dimen/recyclerview_margin_all"

            android:text="@string/news_item_title_default"
            android:textSize="@dimen/recyclerview_size_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/news_item_date"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_margin="@dimen/recyclerview_margin_all"
            android:paddingEnd="@dimen/news_item_date_paddingleft"

            android:text="@string/new_item_date_default"
            android:textSize="@dimen/recyclerview_size_date"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/news_item_news"

            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintTop_toBottomOf="@id/news_item_title"
            app:layout_constraintLeft_toRightOf="@id/news_item_img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_margin="@dimen/recyclerview_margin_all"
            android:padding="5dp"

            android:text="@string/news_item_news_default"
            android:textSize="@dimen/recyclerview_news"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>